--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build
         run: dotnet build Dialysis.slnx --no-restore -c Release
 
-      # Run unit and integration tests by project (excludes E2E). dotnet test accepts only one project per invocation.
+      # Run unit and integration tests by project (excludes E2E). dotnet test with project path (--no-build can cause invalid DLL arg on .NET 10).
       - name: Run unit tests
         run: |
           for proj in \
@@ -42,8 +42,14 @@ jobs:
             tests/Dialysis.Prediction.UnitTests/Dialysis.Prediction.UnitTests.csproj \
             tests/Dialysis.IdentityAdmission.UnitTests/Dialysis.IdentityAdmission.UnitTests.csproj \
             tests/FhirCore.Subscriptions.UnitTests/FhirCore.Subscriptions.UnitTests.csproj; do
-            dotnet test "$proj" --no-build -c Release --verbosity normal
+            dotnet test "$proj" -c Release --verbosity normal
           done
+
+      - name: Pull Docker images for integration tests
+        run: |
+          docker pull postgres:16-alpine
+          docker pull mcr.microsoft.com/mssql/server:2022-latest
+          docker pull mcr.microsoft.com/azure-messaging/servicebus-emulator:latest
 
       - name: Run integration tests
         run: |
@@ -53,5 +59,5 @@ jobs:
             tests/Dialysis.HealthChecks.IntegrationTests/Dialysis.HealthChecks.IntegrationTests.csproj \
             tests/Dialysis.Messaging.IntegrationTests/Dialysis.Messaging.IntegrationTests.csproj \
             tests/FhirCore.Subscriptions.IntegrationTests/FhirCore.Subscriptions.IntegrationTests.csproj; do
-            dotnet test "$proj" --no-build -c Release --verbosity normal
+            dotnet test "$proj" -c Release --verbosity normal
           done
