Enhance session management by implementing session completion saga orchestration, integrating EHR push, audit, and event export steps. Remove obsolete session completion handlers and options, and update related documentation. Add medication administration and service request features with corresponding controllers and endpoints in the Dialysis Gateway.

--- a/src/Dialysis/Dialysis.Gateway/Dialysis.Gateway.csproj
+++ b/src/Dialysis/Dialysis.Gateway/Dialysis.Gateway.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Transponder\Transponder\Transponder.csproj" />
+    <ProjectReference Include="..\..\Transponder\Transponder.Persistence.EntityFramework.PostgreSql\Transponder.Persistence.EntityFramework.PostgreSql.csproj" />
     <ProjectReference Include="..\..\Transponder\Transponder.Transports.AzureServiceBus\Transponder.Transports.AzureServiceBus.csproj" />
     <ProjectReference Include="..\Dialysis.Alerting\Dialysis.Alerting.csproj" />
     <ProjectReference Include="..\Dialysis.Contracts\Dialysis.Contracts.csproj" />
