Add EventExport configuration to appsettings and update error message for session completion

--- a/src/Dialysis/Dialysis.Gateway/appsettings.json
+++ b/src/Dialysis/Dialysis.Gateway/appsettings.json
@@ -10,6 +10,11 @@
   "ConnectionStrings": {
     "PostgreSQL": "Host=localhost;Database=dialysis_gateway;Username=postgres;Password=postgres"
   },
+  "EventExport": {
+    "UseAzureServiceBus": false,
+    "ConnectionString": "",
+    "Topic": "dialysis-events"
+  },
   "Integration": {
     "EhrFhirBaseUrl": "",
     "TokenEndpoint": "",
