Add authentication and authorization features to the Dialysis Alarm service. Introduce ScopeOrBypassHandler and ScopeOrBypassRequirement for custom authorization logic. Update appsettings for JWT configuration and enhance HL7 message parsing with new alarm and observation mappings. Refactor existing code for improved clarity and maintainability, including updates to various domain value objects and mappers.

--- a/Services/Dialysis.Alarm/Dialysis.Alarm.Api/Dialysis.Alarm.Api.csproj
+++ b/Services/Dialysis.Alarm/Dialysis.Alarm.Api/Dialysis.Alarm.Api.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.NpgSql" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     </ItemGroup>
 
