--- a/Services/Dialysis.Patient/Dialysis.Patient.Api/Dialysis.Patient.Api.csproj
+++ b/Services/Dialysis.Patient/Dialysis.Patient.Api/Dialysis.Patient.Api.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.NpgSql" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     </ItemGroup>
 
