--- a/Services/Dialysis.Prescription/Dialysis.Prescription.Api/appsettings.json
+++ b/Services/Dialysis.Prescription/Dialysis.Prescription.Api/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PrescriptionDb": "Host=localhost;Database=dialysis_prescription;Username=postgres;Password=postgres"
+  },
+  "Authentication": {
+    "JwtBearer": {
+      "Authority": "https://login.microsoftonline.com/common/v2.0",
+      "Audience": "api://dialysis-pdms",
+      "RequireHttpsMetadata": true
+    }
+  }
 }
