--- a/Services/Dialysis.Treatment/Dialysis.Treatment.Api/appsettings.Development.json
+++ b/Services/Dialysis.Treatment/Dialysis.Treatment.Api/appsettings.Development.json
@@ -1,8 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Information"
-    }
-  }
+  "Logging": { "LogLevel": { "Default": "Debug", "Microsoft.AspNetCore": "Information" } },
+  "Authentication": { "JwtBearer": { "DevelopmentBypass": true } }
 }
