--- a/Services/Dialysis.Treatment/Dialysis.Treatment.Api/appsettings.json
+++ b/Services/Dialysis.Treatment/Dialysis.Treatment.Api/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TreatmentDb": "Host=localhost;Database=dialysis_treatment;Username=postgres;Password=postgres"
+  },
+  "Authentication": {
+    "JwtBearer": {
+      "Authority": "https://login.microsoftonline.com/common/v2.0",
+      "Audience": "api://dialysis-pdms",
+      "RequireHttpsMetadata": true
+    }
   }
 }
