--- a/Services/Dialysis.Treatment/Dialysis.Treatment.Tests/Dialysis.Treatment.Tests.csproj
+++ b/Services/Dialysis.Treatment/Dialysis.Treatment.Tests/Dialysis.Treatment.Tests.csproj
@@ -9,11 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Dialysis.Hl7ToFhir\Dialysis.Hl7ToFhir.csproj" />
     <ProjectReference Include="..\Dialysis.Treatment.Application\Dialysis.Treatment.Application.csproj" />
     <ProjectReference Include="..\Dialysis.Treatment.Infrastructure\Dialysis.Treatment.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Moq" />
     <PackageReference Include="Shouldly" />
