--- a/Services/Dialysis.Device/Dialysis.Device.Application/Dialysis.Device.Application.csproj
+++ b/Services/Dialysis.Device/Dialysis.Device.Application/Dialysis.Device.Application.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <InternalsVisibleTo Include="Dialysis.Patient.Tests" />
+        <InternalsVisibleTo Include="Dialysis.Device.Tests" />
     </ItemGroup>
 
     <ItemGroup>
