Add FHIR integration and new services for Dialysis Cds and Fhir. Introduce Cds API for prescription compliance evaluation and Fhir API for bulk export of resources. Update appsettings for new service configurations and enhance existing services with FHIR endpoints. Refactor device and patient services to support FHIR queries and responses, including new controllers and DTOs for handling FHIR resources.

--- a/Gateway/Dialysis.Gateway/appsettings.Development.json
+++ b/Gateway/Dialysis.Gateway/appsettings.Development.json
@@ -42,6 +42,13 @@
             "Address": "http://localhost:5054"
           }
         }
+      },
+      "fhir-cluster": {
+        "Destinations": {
+          "fhir": {
+            "Address": "http://localhost:5055"
+          }
+        }
       }
     }
   }
