--- a/Gateway/Dialysis.Gateway/appsettings.json
+++ b/Gateway/Dialysis.Gateway/appsettings.json
@@ -11,93 +11,174 @@
     "Routes": {
       "patient-route": {
         "ClusterId": "patient-cluster",
-        "Match": { "Path": "/api/patients/{**catch-all}" }
+        "Match": {
+          "Path": "/api/patients/{**catch-all}"
+        }
       },
       "patient-hl7-qbp-q22": {
         "ClusterId": "patient-cluster",
-        "Match": { "Path": "/api/hl7/qbp-q22" },
+        "Match": {
+          "Path": "/api/hl7/qbp-q22"
+        },
         "Order": 1
       },
       "patient-hl7-rsp-k22": {
         "ClusterId": "patient-cluster",
-        "Match": { "Path": "/api/hl7/rsp-k22" },
+        "Match": {
+          "Path": "/api/hl7/rsp-k22"
+        },
         "Order": 2
       },
       "prescription-route": {
         "ClusterId": "prescription-cluster",
-        "Match": { "Path": "/api/prescriptions/{**catch-all}" }
+        "Match": {
+          "Path": "/api/prescriptions/{**catch-all}"
+        }
       },
       "prescription-audit": {
         "ClusterId": "prescription-cluster",
-        "Match": { "Path": "/api/audit-events/{**catch-all}" }
+        "Match": {
+          "Path": "/api/audit-events/{**catch-all}"
+        }
       },
       "prescription-hl7-qbp-d01": {
         "ClusterId": "prescription-cluster",
-        "Match": { "Path": "/api/hl7/qbp-d01" },
+        "Match": {
+          "Path": "/api/hl7/qbp-d01"
+        },
         "Order": 3
       },
       "prescription-hl7-alt": {
         "ClusterId": "prescription-cluster",
-        "Match": { "Path": "/api/prescriptions/hl7/{**catch-all}" },
-        "Transforms": [{ "PathSet": "/api/hl7/{**catch-all}" }],
+        "Match": {
+          "Path": "/api/prescriptions/hl7/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathSet": "/api/hl7/{**catch-all}"
+          }
+        ],
         "Order": 4
       },
       "treatment-route": {
         "ClusterId": "treatment-cluster",
-        "Match": { "Path": "/api/treatment-sessions/{**catch-all}" }
+        "Match": {
+          "Path": "/api/treatment-sessions/{**catch-all}"
+        }
       },
       "treatment-hl7-oru-batch": {
         "ClusterId": "treatment-cluster",
-        "Match": { "Path": "/api/hl7/oru/batch" },
+        "Match": {
+          "Path": "/api/hl7/oru/batch"
+        },
         "Order": 5
       },
       "treatment-hl7-oru": {
         "ClusterId": "treatment-cluster",
-        "Match": { "Path": "/api/hl7/oru/{**catch-all}" },
+        "Match": {
+          "Path": "/api/hl7/oru/{**catch-all}"
+        },
         "Order": 6
       },
       "treatment-transponder": {
         "ClusterId": "treatment-cluster",
-        "Match": { "Path": "/transponder/{**catch-all}" }
+        "Match": {
+          "Path": "/transponder/{**catch-all}"
+        }
       },
       "alarm-route": {
         "ClusterId": "alarm-cluster",
-        "Match": { "Path": "/api/alarms/{**catch-all}" }
+        "Match": {
+          "Path": "/api/alarms/{**catch-all}"
+        }
       },
       "alarm-hl7": {
         "ClusterId": "alarm-cluster",
-        "Match": { "Path": "/api/hl7/alarm" },
+        "Match": {
+          "Path": "/api/hl7/alarm"
+        },
         "Order": 7
       },
       "device-route": {
         "ClusterId": "device-cluster",
-        "Match": { "Path": "/api/devices/{**catch-all}" }
+        "Match": {
+          "Path": "/api/devices/{**catch-all}"
+        }
+      },
+      "fhir-route": {
+        "ClusterId": "fhir-cluster",
+        "Match": {
+          "Path": "/api/fhir/{**catch-all}"
+        }
+      },
+      "cds-route": {
+        "ClusterId": "cds-cluster",
+        "Match": {
+          "Path": "/api/cds/{**catch-all}"
+        }
+      },
+      "reports-route": {
+        "ClusterId": "reports-cluster",
+        "Match": {
+          "Path": "/api/reports/{**catch-all}"
+        }
       }
     },
     "Clusters": {
       "patient-cluster": {
         "Destinations": {
-          "patient": { "Address": "http://localhost:5051" }
+          "patient": {
+            "Address": "http://localhost:5051"
+          }
         }
       },
       "prescription-cluster": {
         "Destinations": {
-          "prescription": { "Address": "http://localhost:5052" }
+          "prescription": {
+            "Address": "http://localhost:5052"
+          }
         }
       },
       "treatment-cluster": {
         "Destinations": {
-          "treatment": { "Address": "http://localhost:5050" }
+          "treatment": {
+            "Address": "http://localhost:5050"
+          }
         }
       },
       "alarm-cluster": {
         "Destinations": {
-          "alarm": { "Address": "http://localhost:5053" }
+          "alarm": {
+            "Address": "http://localhost:5053"
+          }
         }
       },
       "device-cluster": {
         "Destinations": {
-          "device": { "Address": "http://localhost:5054" }
+          "device": {
+            "Address": "http://localhost:5054"
+          }
+        }
+      },
+      "fhir-cluster": {
+        "Destinations": {
+          "fhir": {
+            "Address": "http://localhost:5055"
+          }
+        }
+      },
+      "cds-cluster": {
+        "Destinations": {
+          "cds": {
+            "Address": "http://localhost:5056"
+          }
+        }
+      },
+      "reports-cluster": {
+        "Destinations": {
+          "reports": {
+            "Address": "http://localhost:5057"
+          }
         }
       }
     }
