Add FHIR export route to appsettings and introduce development settings for Cds, Fhir, and Reports services. Refactor SubscriptionDispatcher for improved subscription matching and notification handling. Update documentation to reflect implemented features and service architecture.

--- a/Gateway/Dialysis.Gateway/appsettings.json
+++ b/Gateway/Dialysis.Gateway/appsettings.json
@@ -111,6 +111,13 @@
           "Path": "/api/fhir/{**catch-all}"
         }
       },
+      "fhir-export-route": {
+        "ClusterId": "fhir-cluster",
+        "Match": {
+          "Path": "/api/fhir/$export"
+        },
+        "Order": 0
+      },
       "cds-route": {
         "ClusterId": "cds-cluster",
         "Match": {
