--- a/Services/Dialysis.Device/Dialysis.Device.Tests/Dialysis.Device.Tests.csproj
+++ b/Services/Dialysis.Device/Dialysis.Device.Tests/Dialysis.Device.Tests.csproj
@@ -8,17 +8,19 @@
         <IsTestProject>true</IsTestProject>
     </PropertyGroup>
 
-    <ItemGroup>
-        <ProjectReference Include="..\Dialysis.Device.Application\Dialysis.Device.Application.csproj" />
-        <ProjectReference Include="..\Dialysis.Device.Infrastructure\Dialysis.Device.Infrastructure.csproj" />
-    </ItemGroup>
+  <ItemGroup>
+    <Compile Include="..\..\..\BuildingBlocks.Testcontainers\PostgreSqlCollectionDefinition.cs" Link="PostgreSqlCollectionDefinition.cs" />
+    <ProjectReference Include="..\..\..\BuildingBlocks.Testcontainers\BuildingBlocks.Testcontainers.csproj" />
+    <ProjectReference Include="..\Dialysis.Device.Application\Dialysis.Device.Application.csproj" />
+    <ProjectReference Include="..\Dialysis.Device.Infrastructure\Dialysis.Device.Infrastructure.csproj" />
+  </ItemGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" />
-        <PackageReference Include="Shouldly" />
-        <PackageReference Include="xunit" />
-        <PackageReference Include="xunit.runner.visualstudio" PrivateAssets="all" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Bogus" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="Shouldly" />
+    <PackageReference Include="xunit" />
+    <PackageReference Include="xunit.runner.visualstudio" PrivateAssets="all" />
+  </ItemGroup>
 
 </Project>
