--- a/Services/Dialysis.Patient/Dialysis.Patient.Tests/Dialysis.Patient.Tests.csproj
+++ b/Services/Dialysis.Patient/Dialysis.Patient.Tests/Dialysis.Patient.Tests.csproj
@@ -9,12 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\..\..\BuildingBlocks.Testcontainers\PostgreSqlCollectionDefinition.cs" Link="PostgreSqlCollectionDefinition.cs" />
+    <ProjectReference Include="..\..\..\BuildingBlocks.Testcontainers\BuildingBlocks.Testcontainers.csproj" />
     <ProjectReference Include="..\Dialysis.Patient.Application\Dialysis.Patient.Application.csproj" />
     <ProjectReference Include="..\Dialysis.Patient.Infrastructure\Dialysis.Patient.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
+    <PackageReference Include="Bogus" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Shouldly" />
     <PackageReference Include="xunit" />
