Add HL7 time synchronization support with new Hl7TimeSyncHelper and TimeSyncOptions classes. Implement timestamp extraction and drift validation for HL7 messages in IngestOruMessageCommandHandler and IngestOruR40MessageCommandHandler. Update appsettings for configurable drift settings and enhance health check endpoint to include server UTC time for verification. Document deployment requirements and time synchronization plan.

--- a/Services/Dialysis.Alarm/Dialysis.Alarm.Api/appsettings.json
+++ b/Services/Dialysis.Alarm/Dialysis.Alarm.Api/appsettings.json
@@ -15,5 +15,9 @@
       "Audience": "api://dialysis-pdms",
       "RequireHttpsMetadata": true
     }
+  },
+  "TimeSync": {
+    "MaxAllowedDriftSeconds": 300,
+    "LogDriftWarnings": true
   }
 }
