--- a/Services/Dialysis.Treatment/Dialysis.Treatment.Api/appsettings.json
+++ b/Services/Dialysis.Treatment/Dialysis.Treatment.Api/appsettings.json
@@ -15,5 +15,9 @@
       "Audience": "api://dialysis-pdms",
       "RequireHttpsMetadata": true
     }
+  },
+  "TimeSync": {
+    "MaxAllowedDriftSeconds": 300,
+    "LogDriftWarnings": true
   }
 }
