Add HL7 time synchronization support with new Hl7TimeSyncHelper and TimeSyncOptions classes. Implement timestamp extraction and drift validation for HL7 messages in the Alarm and Treatment services. Update appsettings for configurable drift settings and enhance health check endpoint to include server UTC time for verification. Document deployment requirements and time synchronization plan.

--- a/Gateway/Dialysis.Gateway/Dialysis.Gateway.csproj
+++ b/Gateway/Dialysis.Gateway/Dialysis.Gateway.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\BuildingBlocks\BuildingBlocks.csproj" />
         <PackageReference Include="AspNetCore.HealthChecks.Uris" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
         <PackageReference Include="Yarp.ReverseProxy" />
