--- a/Services/Dialysis.Prescription/Dialysis.Prescription.Api/appsettings.json
+++ b/Services/Dialysis.Prescription/Dialysis.Prescription.Api/appsettings.json
@@ -18,5 +18,9 @@
   },
   "PrescriptionIngestion": {
     "ConflictPolicy": "Reject"
+  },
+  "TimeSync": {
+    "MaxAllowedDriftSeconds": 300,
+    "LogDriftWarnings": true
   }
 }
