Enhance FHIR service integration by adding new Abstractions and Infrastructure projects. Implement PostgreSQL-backed subscription management with PostgresSubscriptionStore and FhirDbContext for persistent storage. Update FhirBulkExportService and SubscriptionDispatcher to utilize new subscription handling logic. Refactor existing services to support FHIR resource notifications and improve overall architecture. Update docker-compose.yml for new service dependencies and configurations.

--- a/Services/Dialysis.Fhir/Dialysis.Fhir.Api/appsettings.json
+++ b/Services/Dialysis.Fhir/Dialysis.Fhir.Api/appsettings.json
@@ -1,11 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+  "Logging": { "LogLevel": { "Default": "Information", "Microsoft.AspNetCore": "Warning" } },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FhirDb": "Host=localhost;Database=dialysis_fhir;Username=postgres;Password=postgres"
+  },
   "Authentication": {
     "JwtBearer": {
       "Authority": "https://login.microsoftonline.com/common/v2.0",
@@ -14,7 +12,5 @@
       "DevelopmentBypass": false
     }
   },
-  "FhirExport": {
-    "BaseUrl": "http://localhost:5000"
-  }
+  "FhirExport": { "BaseUrl": "http://localhost:5000" }
 }
