--- a/Services/Dialysis.Prescription/Dialysis.Prescription.Application/Dialysis.Prescription.Application.csproj
+++ b/Services/Dialysis.Prescription/Dialysis.Prescription.Application/Dialysis.Prescription.Application.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <InternalsVisibleTo Include="Dialysis.Prescription.Api" />
         <InternalsVisibleTo Include="Dialysis.Prescription.Tests" />
     </ItemGroup>
 
