--- a/Services/Dialysis.Fhir/Dialysis.Fhir.Api/Dialysis.Fhir.Api.csproj
+++ b/Services/Dialysis.Fhir/Dialysis.Fhir.Api/Dialysis.Fhir.Api.csproj
@@ -8,13 +8,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Dialysis.Hl7ToFhir\Dialysis.Hl7ToFhir.csproj" />
         <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.csproj" />
+        <ProjectReference Include="..\Dialysis.Fhir.Abstractions\Dialysis.Fhir.Abstractions.csproj" />
+        <ProjectReference Include="..\..\Dialysis.Hl7ToFhir\Dialysis.Hl7ToFhir.csproj" />
+        <ProjectReference Include="..\Dialysis.Fhir.Infrastructure\Dialysis.Fhir.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="AspNetCore.HealthChecks.NpgSql" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
 </Project>
