--- a/Services/Dialysis.Patient/Dialysis.Patient.Application/Dialysis.Patient.Application.csproj
+++ b/Services/Dialysis.Patient/Dialysis.Patient.Application/Dialysis.Patient.Application.csproj
@@ -7,7 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <InternalsVisibleTo Include="Dialysis.Patient.Tests" />
+        <InternalsVisibleTo Include="Dialysis.Patient.Api" />
+    <InternalsVisibleTo Include="Dialysis.Patient.Tests" />
     </ItemGroup>
 
     <ItemGroup>
