--- a/Services/Dialysis.Prescription/Dialysis.Prescription.Application/Dialysis.Prescription.Application.csproj
+++ b/Services/Dialysis.Prescription/Dialysis.Prescription.Application/Dialysis.Prescription.Application.csproj
@@ -7,8 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <InternalsVisibleTo Include="Dialysis.Prescription.Api" />
-        <InternalsVisibleTo Include="Dialysis.Prescription.Tests" />
+    <InternalsVisibleTo Include="Dialysis.Prescription.Api" />
+    <InternalsVisibleTo Include="Dialysis.Prescription.Infrastructure" />
+    <InternalsVisibleTo Include="Dialysis.Prescription.Tests" />
     </ItemGroup>
 
     <ItemGroup>
