Add integration tests for CDS and Reports services, including unit tests for PrescriptionComplianceService and ReportsAggregationService. Update project references and configurations for new test projects. Enhance Docker Compose setup for service dependencies and health checks.

--- a/Gateway/Dialysis.Gateway/Dialysis.Gateway.csproj
+++ b/Gateway/Dialysis.Gateway/Dialysis.Gateway.csproj
@@ -7,11 +7,14 @@
         <RootNamespace>Dialysis.Gateway</RootNamespace>
     </PropertyGroup>
 
-    <ItemGroup>
-        <ProjectReference Include="..\..\BuildingBlocks\BuildingBlocks.csproj" />
-        <PackageReference Include="AspNetCore.HealthChecks.Uris" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
-        <PackageReference Include="Yarp.ReverseProxy" />
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\BuildingBlocks\BuildingBlocks.csproj" />
+    <PackageReference Include="AspNetCore.HealthChecks.Uris" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" />
+    <PackageReference Include="Yarp.ReverseProxy" />
+  </ItemGroup>
 
 </Project>
