Add production configuration for Docker Compose, setting ASPNETCORE_ENVIRONMENT to Production for all APIs. Update DDD read models and device service plans to mark tasks as completed. Introduce optional work and platform extensions plans for load testing, documentation, and EF refinements. Enhance CI workflow for release builds and add load test workflow with k6 integration.

--- a/Gateway/Dialysis.Gateway/Dialysis.Gateway.csproj
+++ b/Gateway/Dialysis.Gateway/Dialysis.Gateway.csproj
@@ -4,8 +4,9 @@
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>Dialysis.Gateway</RootNamespace>
-    </PropertyGroup>
+    <RootNamespace>Dialysis.Gateway</RootNamespace>
+    <NoWarn>$(NoWarn);IDE0058</NoWarn>
+  </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\BuildingBlocks\BuildingBlocks.csproj" />
