--- a/Gateway/Dialysis.Gateway/appsettings.Development.json
+++ b/Gateway/Dialysis.Gateway/appsettings.Development.json
@@ -6,48 +6,49 @@
       "Yarp": "Debug"
     }
   },
+  "Cors": {
+    "AllowedOrigins": ["http://localhost:3000", "http://localhost:5173"]
+  },
   "ReverseProxy": {
     "Clusters": {
       "patient-cluster": {
         "Destinations": {
-          "patient": {
-            "Address": "http://localhost:5051"
-          }
+          "patient": {"Address": "http://localhost:5051"}
         }
       },
       "prescription-cluster": {
         "Destinations": {
-          "prescription": {
-            "Address": "http://localhost:5052"
-          }
+          "prescription": {"Address": "http://localhost:5052"}
         }
       },
       "treatment-cluster": {
         "Destinations": {
-          "treatment": {
-            "Address": "http://localhost:5050"
-          }
+          "treatment": {"Address": "http://localhost:5050"}
         }
       },
       "alarm-cluster": {
         "Destinations": {
-          "alarm": {
-            "Address": "http://localhost:5053"
-          }
+          "alarm": {"Address": "http://localhost:5053"}
         }
       },
       "device-cluster": {
         "Destinations": {
-          "device": {
-            "Address": "http://localhost:5054"
-          }
+          "device": {"Address": "http://localhost:5054"}
         }
       },
       "fhir-cluster": {
         "Destinations": {
-          "fhir": {
-            "Address": "http://localhost:5055"
-          }
+          "fhir": {"Address": "http://localhost:5055"}
+        }
+      },
+      "cds-cluster": {
+        "Destinations": {
+          "cds": {"Address": "http://localhost:5056"}
+        }
+      },
+      "reports-cluster": {
+        "Destinations": {
+          "reports": {"Address": "http://localhost:5057"}
         }
       }
     }
