--- a/Gateway/Dialysis.Gateway/appsettings.json
+++ b/Gateway/Dialysis.Gateway/appsettings.json
@@ -6,6 +6,9 @@
       "Yarp": "Information"
     }
   },
+  "Cors": {
+    "AllowedOrigins": []
+  },
   "Urls": "http://localhost:5000",
   "ReverseProxy": {
     "Routes": {
