--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         run: dotnet restore
 
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build --no-restore -c Release
 
       - name: Test
-        run: dotnet test --no-build --filter "FullyQualifiedName~Dialysis" --verbosity normal
+        run: dotnet test --no-build -c Release --filter "FullyQualifiedName~Dialysis" --verbosity normal
