--- a/Gateway/Dialysis.Gateway/Dialysis.Gateway.csproj
+++ b/Gateway/Dialysis.Gateway/Dialysis.Gateway.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" />
     <PackageReference Include="Yarp.ReverseProxy" />
   </ItemGroup>
 
